add first endpoint and clean up stuff
